--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -38,6 +38,12 @@ jobs:
         with:
           name: allure-report
           path: allure-report
+      - name: Upload Allure History
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-history
+          path: allure-report/history
+        if: always()
   deploy:
     needs: test
     runs-on: ubuntu-latest
@@ -55,12 +61,6 @@ jobs:
         with:
           name: allure-report
           path: allure-report
-      - name: Upload Allure history
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-history
-          path: allure-report/history
-        if: always()
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
