Enabling Run workflow button

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
   schedule:
     - cron: '0 2 * * *'
+  workflow_dispatch:   # enables "Run workflow" button
 
 jobs:
   test:
@@ -23,7 +24,7 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Run tests
+      - name: Run Playwright tests
         run: npx playwright test
         env:
           BASE_URL: ${{ secrets.BASE_URL }}
@@ -38,29 +39,20 @@ jobs:
         with:
           name: allure-report
           path: allure-report
-      - name: Upload Allure History
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-history
-          path: allure-report/history
-        if: always()
+
   deploy:
     needs: test
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-      - name: Restore Allure history
-        uses: actions/download-artifact@v4
-        with:
-          name: allure-history
-          path: allure-report/history
-        continue-on-error: true
+
       - name: Download Allure Report
         uses: actions/download-artifact@v4
         with:
           name: allure-report
           path: allure-report
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
